# CG

./: CMakeLists.txt  README.md  main.cpp
Project/: README.md
Project/include/: Block.h  Entity.h  Worlds.h  stb_image.h
Project/materials/data/: world1.txt
Project/src/: Image.cpp  Worlds.cpp  header.cpp
include/: Image.h  Player.h  header.h
lab/base/: application.cpp  application.h  camera.cpp  mesh.cpp  mesh.h  model.cpp  model.h  skybox.h  texture.cpp  texture.h
lab/experiment1/: Line.cpp  Line.h  experiment1.vcxproj  experiment1.vcxproj.filters  flag.cpp  flag.h  render_flag.cpp  render_flag.h  star.cpp  star.h
lab/experiment2/: bunny.cpp  bunny.h  experiment2.vcxproj  experiment2.vcxproj.filters  main.cpp  transformation.cpp  transformation.h
lab/experiment3/: ClassDiagram.cd  bunny.cpp  bunny.h  experiment3.vcxproj  experiment3.vcxproj.filters  main.cpp  scene_roaming.cpp  scene_roaming.h
lab/experiment4/: experiment4.vcxproj  experiment4.vcxproj.filters  imgui.ini  instanced_model.cpp  instanced_model.h  instanced_rendering.cpp  instanced_rendering.h  main.cpp  skybox.h
lab/experiment5/: ClassDiagram.cd  experiment5.vcxproj  experiment5.vcxproj.filters  imgui.ini  main.cpp  shading_tutorial.cpp  shading_tutorial.h
lab/experiment6/: assignments.sln
lab/get_start/: get_start.vcxproj  get_start.vcxproj.filters  hello_triangle.cpp  hello_triangle.h  main.cpp
materials/data/: world2.txt  worldtitle.txt
materials/player/: texture_player.txt
materials/texture/: texture.txt
src/: Block.cpp  Entity.cpp  Player.cpp
(+58 files in other folders)
